feat(egm): numerical inverse

--- a/01. BufferStockModel.ipynb
+++ b/01. BufferStockModel.ipynb
@@ -389,7 +389,7 @@
     "    'iegm, Bspline':dict(),\n",
     "    'iegm, Bspline inverse':dict(),\n",
     "\n",
-    "    'iegm, numerical':np.nan + np.zeros(MC_num),\n",
+    "    'egm, numerical':np.nan + np.zeros(MC_num),\n",
     "}\n",
     "error = {\n",
     "    'vfi':np.nan + np.zeros(MC_num),\n",
@@ -400,7 +400,7 @@
     "    'iegm, Bspline':dict(),\n",
     "    'iegm, Bspline inverse':dict(),\n",
     "\n",
-    "    'iegm, numerical':np.nan + np.zeros(MC_num),\n",
+    "    'egm, numerical':np.nan + np.zeros(MC_num),\n",
     "}\n",
     "util = {\n",
     "    'vfi':np.nan + np.zeros(MC_num),\n",
@@ -411,7 +411,7 @@
     "    'iegm, Bspline':dict(),\n",
     "    'iegm, Bspline inverse':dict(),\n",
     "\n",
-    "    'iegm, numerical':np.nan + np.zeros(MC_num),\n",
+    "    'egm, numerical':np.nan + np.zeros(MC_num),\n",
     "}\n",
     "for i_c,num_C in enumerate(C_num_grid):\n",
     "    timing['iegm, linear'][num_C] = np.nan + np.zeros(MC_num)\n",
@@ -481,7 +481,7 @@
     "\n",
     "    model.par.interp_method = 'numerical'\n",
     "    model.par.interp_inverse = False\n",
-    "    method = f'{model.par.method}, {model.par.interp_method}'\n",
+    "    method = f'egm, {model.par.interp_method}'\n",
     "    # Timing\n",
     "    t0 = time()\n",
     "    model.solve()\n",
@@ -502,34 +502,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Euler Error & lifetime util & Timing (rel. to VFI)\n",
-      "vfi: -3.64 &  0.00 & 1.00 \n",
-      "egm: -5.34 &  0.00 & 0.08 \n",
-      "iegm, numerical: -5.34 &  0.00 & 0.12 \n",
+      "lifetime util & Timing (rel. to VFI)\n",
+      "vfi: 0.000 & 1.000 \n",
+      "egm: 0.000 & 0.064 \n",
+      "egm, numerical: 0.000 & 0.112 \n",
       "iegm, linear: \n",
-      "10 -1.70 & 0.25 & 0.08 \n",
-      "20 -1.40 & 0.28 & 0.08 \n",
-      "50 -2.36 & 0.06 & 0.07 \n",
-      "100 -3.11 & 0.01 & 0.08 \n",
-      "200 -3.81 & 0.00 & 0.08 \n",
+      "20 0.282 & 0.065 \n",
+      "50 0.062 & 0.065 \n",
+      "100 0.011 & 0.065 \n",
+      "200 0.002 & 0.065 \n",
       "iegm, linear inverse: \n",
-      "10 -2.34 & 0.07 & 0.08 \n",
-      "20 -2.13 & 0.09 & 0.07 \n",
-      "50 -3.12 & 0.01 & 0.08 \n",
-      "100 -3.85 & 0.00 & 0.08 \n",
-      "200 -4.53 & 0.00 & 0.07 \n",
+      "20 0.090 & 0.065 \n",
+      "50 0.011 & 0.065 \n",
+      "100 0.002 & 0.065 \n",
+      "200 0.000 & 0.065 \n",
       "iegm, Bspline: \n",
-      "10 -1.94 & 0.14 & 0.08 \n",
-      "20 -2.94 & 0.02 & 0.08 \n",
-      "50 -4.40 & 0.00 & 0.08 \n",
-      "100 -5.13 & 0.00 & 0.08 \n",
-      "200 -5.31 & 0.00 & 0.08 \n",
+      "20 0.016 & 0.074 \n",
+      "50 0.001 & 0.074 \n",
+      "100 0.000 & 0.074 \n",
+      "200 0.000 & 0.074 \n",
       "iegm, Bspline inverse: \n",
-      "10 -2.66 & 0.01 & 0.08 \n",
-      "20 -3.75 & 0.00 & 0.08 \n",
-      "50 -5.07 & 0.00 & 0.08 \n",
-      "100 -5.31 & 0.00 & 0.09 \n",
-      "200 -5.33 & 0.00 & 0.09 \n"
+      "20 0.002 & 0.075 \n",
+      "50 0.000 & 0.075 \n",
+      "100 0.000 & 0.075 \n",
+      "200 0.000 & 0.075 \n"
      ]
     }
    ],
@@ -537,12 +533,12 @@
     "# print('Euler Error & lifetime util & Timing (rel. to VFI)')\n",
     "print('lifetime util & Timing (rel. to VFI)')\n",
     "timing_vfi = np.mean(timing['vfi'])\n",
-    "for method in ('vfi','egm','iegm, numerical'):\n",
+    "for method in ('vfi','egm','egm, numerical'):\n",
     "    error_now = np.mean(error[method])\n",
     "    util_now = np.mean(util[method])\n",
     "    time_now = np.mean(timing[method]) / timing_vfi\n",
     "    # print(f'{method}: {error_now:2.2f} &  {util_now:2.2f} & {time_now:2.2f} ')\n",
-    "    print(f'{method}: {util_now:2.2f} & {time_now:2.2f} ')\n",
+    "    print(f'{method}: {util_now:2.3f} & {time_now:2.3f} ')\n",
     "\n",
     "for method in ('iegm, linear','iegm, linear inverse','iegm, Bspline','iegm, Bspline inverse'):\n",
     "    print(f'{method}: ')\n",
@@ -550,8 +546,8 @@
     "        error_now = np.mean(error[method][num_C]) \n",
     "        util_now = np.mean(util[method][num_C]) \n",
     "        time_now = np.mean(timing[method][num_C]) / timing_vfi\n",
-    "        # print(f'{num_C:d} {error_now:2.2f} & {util_now:2.2f} & {time_now:2.2f} ')\n",
-    "        print(f'{num_C:d} {util_now:2.2f} & {time_now:2.2f} ')"
+    "        # print(f'{num_C:d} {error_now:2.3f} & {util_now:2.3f} & {time_now:2.3f} ')\n",
+    "        print(f'{num_C:d} {util_now:2.3f} & {time_now:2.3f} ')"
    ]
   }
  ],
