limited commitment mc

--- a/02. LimitedCommmitmentModel.ipynb
+++ b/02. LimitedCommmitmentModel.ipynb
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specs_true = {'true': {'latexname':'true', 'par':{**settings, 'do_egm':False, 'num_A': 250, 'num_Ctot':250, 'num_power':101, 'num_love':101}}}\n",
+    "specs_true = {'true': {'latexname':'true', 'par':{**settings, 'do_egm':False, 'num_A': 250, 'num_Ctot':150, 'num_power':51, 'num_love':51}}}\n",
     "\n",
     "model_true = lcm.HouseholdModelClass(par=specs_true['true']['par'])\n",
     "model_true.link_to_cpp(force_compile=do_compile)\n",
@@ -165,29 +165,202 @@
       "2/200 running...\n",
       "3/200 running...\n",
       "4/200 running...\n",
-      "5/200 running...\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "function 'simulate' not found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\users\\bnl429\\projects\\econmodel\\EconModel\\cpptools.py:403\u001b[0m, in \u001b[0;36mlink_to_cpp.__call_func\u001b[1;34m(self, funcname, *args)\u001b[0m\n\u001b[0;32m    402\u001b[0m funcnow \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcppfile,funcname)\n\u001b[1;32m--> 403\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mfuncnow\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mp_args\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    404\u001b[0m \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "\u001b[1;31mOSError\u001b[0m: exception: access violation writing 0x00007FFB2242B040",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m model_true\u001b[38;5;241m.\u001b[39mpar\u001b[38;5;241m.\u001b[39mseed \u001b[38;5;241m=\u001b[39m i_mc\n\u001b[0;32m      6\u001b[0m model_true\u001b[38;5;241m.\u001b[39mallocate_draws()\n\u001b[1;32m----> 7\u001b[0m \u001b[43mmodel_true\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msimulate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m true_mean_lifetime_util \u001b[38;5;241m=\u001b[39m model_true\u001b[38;5;241m.\u001b[39msim\u001b[38;5;241m.\u001b[39mmean_lifetime_util\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# setup alternative model solutios\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\bnl429\\Projects\\iEGM\\LimitedCommitmentModel.py:376\u001b[0m, in \u001b[0;36mHouseholdModelClass.simulate\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    373\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124minit\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m key \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdraw\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m key: \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m    374\u001b[0m     \u001b[38;5;28msetattr\u001b[39m(sim, key, np\u001b[38;5;241m.\u001b[39mzeros(val\u001b[38;5;241m.\u001b[39mshape)\u001b[38;5;241m+\u001b[39mnp\u001b[38;5;241m.\u001b[39mnan)\n\u001b[1;32m--> 376\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcpp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msimulate\u001b[49m\u001b[43m(\u001b[49m\u001b[43msim\u001b[49m\u001b[43m,\u001b[49m\u001b[43msol\u001b[49m\u001b[43m,\u001b[49m\u001b[43mpar\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    378\u001b[0m sim\u001b[38;5;241m.\u001b[39mmean_lifetime_util[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmean(np\u001b[38;5;241m.\u001b[39msum(sim\u001b[38;5;241m.\u001b[39mutil,axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m))\n",
-      "File \u001b[1;32mc:\\users\\bnl429\\projects\\econmodel\\EconModel\\cpptools.py:258\u001b[0m, in \u001b[0;36mlink_to_cpp.compile.<locals>.__call_func.<locals>.<lambda>\u001b[1;34m(*x)\u001b[0m\n\u001b[1;32m--> 258\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call_func\u001b[39m(name): \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;241m*\u001b[39mx: \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__call_func\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\users\\bnl429\\projects\\econmodel\\EconModel\\cpptools.py:408\u001b[0m, in \u001b[0;36mlink_to_cpp.__call_func\u001b[1;34m(self, funcname, *args)\u001b[0m\n\u001b[0;32m    404\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m    406\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m--> 408\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m: \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mforce_compile\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# re-linking might solve the problem\u001b[39;00m\n\u001b[0;32m    409\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m: \u001b[38;5;28mprint\u001b[39m(e) \u001b[38;5;66;03m# print error message\u001b[39;00m\n\u001b[0;32m    411\u001b[0m \u001b[38;5;66;03m# print log\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\users\\bnl429\\projects\\econmodel\\EconModel\\cpptools.py:254\u001b[0m, in \u001b[0;36mlink_to_cpp.compile\u001b[1;34m(self, force_compile, do_print)\u001b[0m\n\u001b[0;32m    251\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m do_tasmanian: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdelink(cppfile\u001b[38;5;241m=\u001b[39mtasmanianfile,do_print\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m    253\u001b[0m \u001b[38;5;66;03m# set types\u001b[39;00m\n\u001b[1;32m--> 254\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__set_types\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    255\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m do_print: \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC++ files loaded\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    257\u001b[0m \u001b[38;5;66;03m# f. function call method\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\users\\bnl429\\projects\\econmodel\\EconModel\\cpptools.py:309\u001b[0m, in \u001b[0;36mlink_to_cpp.__set_types\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    306\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mreturn type \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrestype_raw\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not allowed\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    308\u001b[0m \u001b[38;5;66;03m# c. set\u001b[39;00m\n\u001b[1;32m--> 309\u001b[0m funcnow \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcppfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43mfuncname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    310\u001b[0m funcnow\u001b[38;5;241m.\u001b[39mrestype \u001b[38;5;241m=\u001b[39m restype\n\u001b[0;32m    311\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(argtypes) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "File \u001b[1;32mc:\\Users\\bnl429\\Anaconda3\\lib\\ctypes\\__init__.py:386\u001b[0m, in \u001b[0;36mCDLL.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    384\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m name\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m    385\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(name)\n\u001b[1;32m--> 386\u001b[0m func \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getitem__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    387\u001b[0m \u001b[38;5;28msetattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, name, func)\n\u001b[0;32m    388\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m func\n",
-      "File \u001b[1;32mc:\\Users\\bnl429\\Anaconda3\\lib\\ctypes\\__init__.py:391\u001b[0m, in \u001b[0;36mCDLL.__getitem__\u001b[1;34m(self, name_or_ordinal)\u001b[0m\n\u001b[0;32m    390\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name_or_ordinal):\n\u001b[1;32m--> 391\u001b[0m     func \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_FuncPtr\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname_or_ordinal\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    392\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(name_or_ordinal, \u001b[38;5;28mint\u001b[39m):\n\u001b[0;32m    393\u001b[0m         func\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m=\u001b[39m name_or_ordinal\n",
-      "\u001b[1;31mAttributeError\u001b[0m: function 'simulate' not found"
+      "5/200 running...\n",
+      "6/200 running...\n",
+      "7/200 running...\n",
+      "8/200 running...\n",
+      "9/200 running...\n",
+      "10/200 running...\n",
+      "11/200 running...\n",
+      "12/200 running...\n",
+      "13/200 running...\n",
+      "14/200 running...\n",
+      "15/200 running...\n",
+      "16/200 running...\n",
+      "17/200 running...\n",
+      "18/200 running...\n",
+      "19/200 running...\n",
+      "20/200 running...\n",
+      "21/200 running...\n",
+      "22/200 running...\n",
+      "23/200 running...\n",
+      "24/200 running...\n",
+      "25/200 running...\n",
+      "26/200 running...\n",
+      "27/200 running...\n",
+      "28/200 running...\n",
+      "29/200 running...\n",
+      "30/200 running...\n",
+      "31/200 running...\n",
+      "32/200 running...\n",
+      "33/200 running...\n",
+      "34/200 running...\n",
+      "35/200 running...\n",
+      "36/200 running...\n",
+      "37/200 running...\n",
+      "38/200 running...\n",
+      "39/200 running...\n",
+      "40/200 running...\n",
+      "41/200 running...\n",
+      "42/200 running...\n",
+      "43/200 running...\n",
+      "44/200 running...\n",
+      "45/200 running...\n",
+      "46/200 running...\n",
+      "47/200 running...\n",
+      "48/200 running...\n",
+      "49/200 running...\n",
+      "50/200 running...\n",
+      "51/200 running...\n",
+      "52/200 running...\n",
+      "53/200 running...\n",
+      "54/200 running...\n",
+      "55/200 running...\n",
+      "56/200 running...\n",
+      "57/200 running...\n",
+      "58/200 running...\n",
+      "59/200 running...\n",
+      "60/200 running...\n",
+      "61/200 running...\n",
+      "62/200 running...\n",
+      "63/200 running...\n",
+      "64/200 running...\n",
+      "65/200 running...\n",
+      "66/200 running...\n",
+      "67/200 running...\n",
+      "68/200 running...\n",
+      "69/200 running...\n",
+      "70/200 running...\n",
+      "71/200 running...\n",
+      "72/200 running...\n",
+      "73/200 running...\n",
+      "74/200 running...\n",
+      "75/200 running...\n",
+      "76/200 running...\n",
+      "77/200 running...\n",
+      "78/200 running...\n",
+      "79/200 running...\n",
+      "80/200 running...\n",
+      "81/200 running...\n",
+      "82/200 running...\n",
+      "83/200 running...\n",
+      "84/200 running...\n",
+      "85/200 running...\n",
+      "86/200 running...\n",
+      "87/200 running...\n",
+      "88/200 running...\n",
+      "89/200 running...\n",
+      "90/200 running...\n",
+      "91/200 running...\n",
+      "92/200 running...\n",
+      "93/200 running...\n",
+      "94/200 running...\n",
+      "95/200 running...\n",
+      "96/200 running...\n",
+      "97/200 running...\n",
+      "98/200 running...\n",
+      "99/200 running...\n",
+      "100/200 running...\n",
+      "101/200 running...\n",
+      "102/200 running...\n",
+      "103/200 running...\n",
+      "104/200 running...\n",
+      "105/200 running...\n",
+      "106/200 running...\n",
+      "107/200 running...\n",
+      "108/200 running...\n",
+      "109/200 running...\n",
+      "110/200 running...\n",
+      "111/200 running...\n",
+      "112/200 running...\n",
+      "113/200 running...\n",
+      "114/200 running...\n",
+      "115/200 running...\n",
+      "116/200 running...\n",
+      "117/200 running...\n",
+      "118/200 running...\n",
+      "119/200 running...\n",
+      "120/200 running...\n",
+      "121/200 running...\n",
+      "122/200 running...\n",
+      "123/200 running...\n",
+      "124/200 running...\n",
+      "125/200 running...\n",
+      "126/200 running...\n",
+      "127/200 running...\n",
+      "128/200 running...\n",
+      "129/200 running...\n",
+      "130/200 running...\n",
+      "131/200 running...\n",
+      "132/200 running...\n",
+      "133/200 running...\n",
+      "134/200 running...\n",
+      "135/200 running...\n",
+      "136/200 running...\n",
+      "137/200 running...\n",
+      "138/200 running...\n",
+      "139/200 running...\n",
+      "140/200 running...\n",
+      "141/200 running...\n",
+      "142/200 running...\n",
+      "143/200 running...\n",
+      "144/200 running...\n",
+      "145/200 running...\n",
+      "146/200 running...\n",
+      "147/200 running...\n",
+      "148/200 running...\n",
+      "149/200 running...\n",
+      "150/200 running...\n",
+      "151/200 running...\n",
+      "152/200 running...\n",
+      "153/200 running...\n",
+      "154/200 running...\n",
+      "155/200 running...\n",
+      "156/200 running...\n",
+      "157/200 running...\n",
+      "158/200 running...\n",
+      "159/200 running...\n",
+      "160/200 running...\n",
+      "161/200 running...\n",
+      "162/200 running...\n",
+      "163/200 running...\n",
+      "164/200 running...\n",
+      "165/200 running...\n",
+      "166/200 running...\n",
+      "167/200 running...\n",
+      "168/200 running...\n",
+      "169/200 running...\n",
+      "170/200 running...\n",
+      "171/200 running...\n",
+      "172/200 running...\n",
+      "173/200 running...\n",
+      "174/200 running...\n",
+      "175/200 running...\n",
+      "176/200 running...\n",
+      "177/200 running...\n",
+      "178/200 running...\n",
+      "179/200 running...\n",
+      "180/200 running...\n",
+      "181/200 running...\n",
+      "182/200 running...\n",
+      "183/200 running...\n",
+      "184/200 running...\n",
+      "185/200 running...\n",
+      "186/200 running...\n",
+      "187/200 running...\n",
+      "188/200 running...\n",
+      "189/200 running...\n",
+      "190/200 running...\n",
+      "191/200 running...\n",
+      "192/200 running...\n",
+      "193/200 running...\n",
+      "194/200 running...\n",
+      "195/200 running...\n",
+      "196/200 running...\n",
+      "197/200 running...\n",
+      "198/200 running...\n",
+      "199/200 running...\n",
+      "200/200 running...\n"
      ]
     }
    ],
@@ -195,7 +368,7 @@
     "for i_mc in range(MC_num):\n",
     "    if PRINT: print(f'{i_mc+1}/{MC_num} running...')\n",
     "\n",
-    "    # simulate true model (solved once above)\n",
+    "    # simulate true model (solved once above)    \n",
     "    model_true.par.seed = i_mc\n",
     "    model_true.allocate_draws()\n",
     "    model_true.simulate()\n",
@@ -203,7 +376,6 @@
     "\n",
     "    # setup alternative model solutios\n",
     "    model = lcm.HouseholdModelClass(par=settings)\n",
-    "\n",
     "    model.par.seed = i_mc\n",
     "    model.allocate()\n",
     "    model.link_to_cpp(force_compile=False)\n",
@@ -282,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -290,18 +462,18 @@
      "output_type": "stream",
      "text": [
       "Lifetime utility & Timing (rel. to VFI)\n",
-      "vfi: 0.510 & 1.000 \n",
-      "egm, numerical: 0.509 & 0.274 \n",
+      "vfi: 0.753 & 1.000 \n",
+      "egm, numerical: 0.752 & 0.276 \n",
       "iegm, linear: \n",
-      "20 0.473 & 0.019 \n",
-      "50 0.509 & 0.019 \n",
-      "100 0.509 & 0.019 \n",
-      "200 0.510 & 0.019 \n",
+      "20 0.717 & 0.019 \n",
+      "50 0.752 & 0.020 \n",
+      "100 0.752 & 0.020 \n",
+      "200 0.752 & 0.020 \n",
       "iegm, linear inverse: \n",
-      "20 0.509 & 0.018 \n",
-      "50 0.510 & 0.019 \n",
-      "100 0.510 & 0.019 \n",
-      "200 0.510 & 0.019 \n"
+      "20 0.753 & 0.019 \n",
+      "50 0.752 & 0.020 \n",
+      "100 0.753 & 0.020 \n",
+      "200 0.753 & 0.020 \n"
      ]
     }
    ],
